[FIX] web_enterprise: fix CP's breadcrumb back button alignment
Breadcrumb's back button displayed in mobile (aka small size window) had
wrong vertical alignment (too low).
Also the horizontal padding was too high.

Related to task 1893168.

closes odoo/enterprise#3052

--- a/web_enterprise/static/src/scss/control_panel_layout.scss
+++ b/web_enterprise/static/src/scss/control_panel_layout.scss
@@ -30,6 +30,10 @@
                         color: inherit;
                     }
 
+                    &.btn {
+                        padding: 0.2rem 0.4rem;
+                    }
+
                     > a {
                         display: none;
                     }
